--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "babel src --out-dir dist",
     "dev": "nodemon --exec npm run restart",
     "restart": "npm run build && npm run start",
-    "start": "set DEBUG=api:server && node ./dist/bin/start.js"
+    "start": "node ./dist/bin/start.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
