--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "@types/express": "^4.17.2",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.14.1",
